Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28567

CLONE - high-numbered Button events broken in Qt5 (fix Cocoa platform)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.2
    • 5.0.0 RC 1
    • None
    • Qt5 on Cocoa/OS-X
    • Change-Id: Ibae2ae4e8a881b825a8862afb82aa80437751111

    Description

      Press and release events of XButton1/2 (and higher) is broken in current Qt5. This Clone created for Cocoa platform fix, which has less serious errors than XCB. See https://bugreports.qt-project.org/browse/QTBUG-28567 for original XCB bug. But use the test case described here.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rickst29 Richard Stockton
            rickst29 Richard Stockton
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes